se agrega fluentValidation para validacion del lado del cliente

--- a/src/Personas.Negocio/Personas.Negocio.csproj
+++ b/src/Personas.Negocio/Personas.Negocio.csproj
@@ -5,10 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Mediador\PersonaOperaciones\Comandos\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.2" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
